--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css"/>
-    <link rel="stylesheet" href="../src/style.css"/>
+    <link rel="stylesheet" href="./style.css"/>
     <style>
     .btn-warning:hover {
         box-shadow: 0 0 10px rgba(0,0,0,0.2);
